--- a/Relatório/Semana-1/3-Levantamento-de-Requisitos/requisitos.tex
+++ b/Relatório/Semana-1/3-Levantamento-de-Requisitos/requisitos.tex
@@ -110,7 +110,7 @@ O processo de otimização de rota é considerado o coração do sistema devido 
 
 A seguir, serão destacados os principais aspectos do Diagrama de Fluxo de Dados de nível 2 e sua relevância para o sistema:
 
-    \textbf{Entradas Detalhadas:} O diagrama apresenta as entradas detalhadas necessárias para o processo de otimização de rota. Isso inclui informações sobre as preferências dos clientes, como as cidades ou atrações que desejam visitar, as restrições temporais e orçamentárias, entre outros dados relevantes. Essas entradas são fundamentais para garantir que os roteiros sejam personalizados e adaptados às necessidades de cada turista.
+    \textbf{Entradas Detalhadas:} O diagrama apresenta as entradas detalhadas necessárias para o processo de otimização de rota. Isso inclui informações sobre as preferências dos clientes, como as cidades ou atrações que desejam visitar, as restrições temporais e orçamentárias, entre outros dados relevantes, sobretudo, os parâmetros do modelod e otimização. Essas entradas são fundamentais para garantir que os roteiros sejam personalizados e adaptados às necessidades de cada turista.
 
     \textbf{Utilização de Modelos de Pesquisa Operacional:} O diagrama evidencia a aplicação dos modelos de Pesquisa Operacional no processo de otimização de rota. Esses modelos matemáticos avançados permitem resolver problemas complexos de forma eficiente, considerando restrições como janelas de tempo, custos e distâncias percorridas. A utilização desses modelos é essencial para garantir a criação de itinerários lógicos e otimizados.
 
