--- a/Relatório/Semana-1/0-Capa/capa.tex
+++ b/Relatório/Semana-1/0-Capa/capa.tex
@@ -13,12 +13,13 @@
 \vspace*{.8cm}
 {\Large \textbf{SISTEMAS DE INFORMAÇÕES GERENCIAIS}}\\
 \vspace*{3cm}
-{\Large \textbf{Sistema de Informação para Otimização de Roteiros Turísticos}}\\
+{\Large \textbf{Sistema de Informação para Otimização de Roteiros Turísticos por Metaheuristica}}\\
 \vspace*{4.5cm}
 \begin{flushright}
     \onehalfspacing
     {\Large  João Victor Pantaroto Neves - 769856}\\
     {\Large  João Vitor Carnaval Duarte - 800346}\\
+    {\Large  José Matheus da Silva Medeiros 770338}\\
     {\Large  Lucas C. Brandão da Silva - 758885}\\
     {\Large  Mariana Nakandakari  - 770107}\\
     {\Large  Pedro Peverari Di Lallo  - 792328}\\
