--- a/Relatório/Semana-1/3-Levantamento-de-Requisitos/requisitos.tex
+++ b/Relatório/Semana-1/3-Levantamento-de-Requisitos/requisitos.tex
@@ -31,7 +31,7 @@ O diagrama de caso de uso é uma ferramenta essencial na engenharia de requisito
 
 O diagrama de caso de uso identifica os atores envolvidos no sistema, representados por \textit{clientes} e \textit{administrador do sistema}, e detalha as interações entre eles e o sistema. Além disso, apresenta as funcionalidades oferecidas, como o cadastro de novos clientes, a seleção de cidades ou atrações turísticas, a otimização de rotas, a consulta de relatórios sobre as rotas e a possibilidade de enviar feedbacks.
 
-Essa representação visual do sistema de otimização de roteiros turísticos é crucial para compreender claramente suas funcionalidades e requisitos, bem como para identificar os fluxos de interação entre os atores e o sistema. Na figura, \ref{fig:DCU} há uma miniatura do diagrama, que pode ser melhor consultado no apêdice.
+Essa representação visual do sistema de otimização de roteiros turísticos é crucial para compreender claramente suas funcionalidades e requisitos, bem como para identificar os fluxos de interação entre os atores e o sistema. Na figura, \ref{fig:DCU} há uma miniatura do diagrama.
 
 
 \begin{figure}[H]
